2022-07-13 0.2.1 just made public Singleton config methods. So i can try again with binary once updated rubygems. 
                 Yup, I really need to learn to load local gem code from binary :)
2022-07-13 0.2.0 MAJOR refactor
2022-07-13 0.1.2 RicDisk finally spits out something meaningful and colored.
2022-07-13 0.1.1 Added Rake test - wow
2022-07-13 0.1.0 Refactored the Gempec A LOT. Also moved some libraries internally.