@@ -21,7 +21,7 @@ push-to-rubygems: build-local test
 list:
 	gem list -r storazzo
 
-test:
+test-all:
 	echo 1. Testing the library end to end by requiring it..
 	echo "Storazzo::Main.all_tests "  | irb -Ilib -rstorazzo
 	make mounts
@@ -32,6 +32,9 @@ test:
 	echo 4. Prove I can include local gem in irb and play around. Similarly to rails console without reload.  
 	make irb-test
 	@echo 'OK: ALL TESTS PASSED. #STIKA'
+
+test:
+	RUBYOPT="-W0" rake test
 
 # RicDisk test
 mounts:
